<resources>
    <string name="app_name">Pastebin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entry_activity_already_have_account">Already have an account? Sign in.</string>
    <string name="entry_activity_do_not_have_account">Do not have an account yet? Sign up now.</string>
    <string name="forgot_login_help_with_logging_on_to_the_system">Forgot login details? Help with logging on to the system.</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="name_and_password">NAME AND PASSWORD</string>
    <string name="to_register">To register</string>
    <string name="do_you_really_back">Do you really want to come back?</string>
    <string name="you_are_almost">You\'re almost there!</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="network_error">Unknown network error</string>
    <string name="error">Error</string>
    <string name="empty_field">empty field</string>
    <string name="paste">Paste</string>
    <string name="add_paste">Add Paste</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="go_out">Do you really want to go out?</string>
    <string name="warning">Warning</string>
    <string name="exit">Exit</string>
    <string name="save_the_post_first">save the post first</string>

    <string-array name="language">
        <item>Text</item>
        <item>JavaScript</item>
        <item>jQuery</item>
        <item>PHP</item>
        <item>HTML</item>
        <item>HTML 5</item>
        <item>CSS</item>
        <item>JSON</item>
        <item>MXML</item>
        <item>XML</item>
        <item>Ruby</item>
        <item>Python</item>
        <item>Java</item>
        <item>Groovy</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Objective C</item>
        <item>C#</item>
        <item>C</item>
        <item>C++</item>
        <item>SQL</item>
        <item>MySQL</item>
        <item>Go</item>
        <item>Scala</item>
        <item>Delphi</item>
    </string-array>

    <string-array name="language_pref">
        <item>text</item>
        <item>javascript</item>
        <item>jquery</item>
        <item>php</item>
        <item>html4strict</item>
        <item>html5</item>
        <item>css</item>
        <item>json</item>
        <item>mxml</item>
        <item>xml</item>
        <item>ruby</item>
        <item>python</item>
        <item>java</item>
        <item>groovy</item>
        <item>kotlin</item>
        <item>swift</item>
        <item>objc</item>
        <item>csharp</item>
        <item>c</item>
        <item>cpp</item>
        <item>sql</item>
        <item>mysql</item>
        <item>go</item>
        <item>scala</item>
        <item>delphi</item>
    </string-array>
</resources>
